--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
+    "echarts": "^4.8.0",
     "element-ui": "^2.15.0",
+    "v-charts": "^1.19.0",
     "vant": "^2.12.4",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "zrender": "^4.3.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
